@@ -1,5 +1,5 @@
 AUX 99devkitpro 94 RMD160 c2b8614753cdeb3d8ca6541d714d324dd1ad9d93 SHA1 828fcde98cb7320bfbacc734f4b5370b976266dd SHA256 3787d368a52f45e318133058e561aa47f3fbe979910d1b85afa3c1b62179ae8f
-DIST devkitARM_r20-linux.tar.bz2 13694348 RMD160 faed41dfb16d5356f230cccef2f1c3df556a8678 SHA1 da5266dbae2a0b63dac390b61103c93052e02275 SHA256 233cc2db447d9849e761efa211bc7738da327a33ff922481543cab8f43799187
-EBUILD devkitarm-bin-20.ebuild 662 RMD160 c160e0224a8a1baa9923298517441a9a99e47193 SHA1 4546249f1c3c8ecc0c22f73db4eb462d5df24cde SHA256 3a7c4be59dceb4743187550c3eba28344b980342cf09b35f65dcecf9bb00cd58
-MISC ChangeLog 445 RMD160 8e35efed728364febfc4bb5a292b936c290b7984 SHA1 2f47f13bccd45b51cab4f5668102699ff51a9abe SHA256 be863634befa6391505c2a1464adeb150d2949a416ababad38ac4dad7555294b
+DIST devkitARM_r21-linux.tar.bz2 19401719 RMD160 fe676610a1b55daa0a8aa396d65a9cc45c4f20ec SHA1 f35f6aa890f52b75cdce06b8d35e6789b1ee1912 SHA256 7a3e1ab1c7d3f3a98389f3bd78ad52826fe65b2d869c3b1f187c068b989ae203
+EBUILD devkitarm-bin-21.ebuild 663 RMD160 fdbac4861df9b87858e15c3b8fe789ff7f5b00e2 SHA1 ec50ba0dd7a1a7e87d4b7158ccfead60beba1f33 SHA256 d3d6bf5b9ae2ac28c61b50a858eef1e10c688e7023241286dd623a6f26830085
+MISC ChangeLog 600 RMD160 e3a0b97dc7abc5d0e0b308a2ad5a51fab80a60e1 SHA1 9b59f0e97dc088ecacd0f04459113197e78da223 SHA256 570363366f25c28cff79cd45d384f32754b1dfb64522a6a639c6435b44a2c49c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
