@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Dec 2007; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
+  -devkitarm-bin-20.ebuild, +devkitarm-bin-21.ebuild:
+  Updated Ebuild for bug 179209.
+
   21 May 2007; Christian Faulhammer <opfer@gentoo.org>
   devkitarm-bin-20.ebuild:
   add quotes for a variable
